--- a/src/styles/components/VoltageDrop.scss
+++ b/src/styles/components/VoltageDrop.scss
@@ -1,9 +1,11 @@
 .formulario {
-    max-width: 375px;
+    width: 95%;
+    max-width: 420px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0 auto;
     padding: 2rem;
     border-radius: 1rem;
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
