--- a/src/styles/components/VoltageDrop.scss
+++ b/src/styles/components/VoltageDrop.scss
@@ -89,3 +89,11 @@
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
     background-color: #FFFFFF;
 }
+
+div {
+    width: 100%;
+    margin-bottom: 1rem;
+    // border: 1px solid red;
+    border-bottom: 0.5px solid rgb(87, 109, 103);
+    padding-bottom: 1.5rem;
+}
