--- a/src/styles/components/VoltageDrop.scss
+++ b/src/styles/components/VoltageDrop.scss
@@ -1,80 +1,6 @@
-// .formulario {
-//     width: 95%;
-//     max-width: 420px;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     justify-content: center;
-//     margin: 0 auto;
-//     padding: 2rem;
-//     border-radius: 1rem;
-//     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
-//     background-color: #FFFFFF;
-
-//     label {
-//         font-size: 1.2rem;
-//         font-weight: 500;
-//         margin-bottom: 0.5rem;
-//     }
-
-//     input,
-//     select {
-//         width: 100%;
-//         border: 2px solid #E5E5E5;
-//         border-radius: 0.5rem;
-//         padding: 0.5rem;
-//         margin-bottom: 1rem;
-//         font-size: 1rem;
-//         font-weight: 400;
-//         color: #2C2C2C;
-
-//         &:focus {
-//             outline: none;
-//             border-color: #C4C4C4;
-//         }
-
-//         &::placeholder {
-//             color: #C4C4C4;
-//         }
-//     }
-
-//     select {
-//         background-color: transparent;
-//         background-position: right 0.5rem top 50%, right 0.25rem top 50%, center;
-//         background-repeat: no-repeat;
-//         background-size: 0.75rem auto, 0.75rem auto, 1rem auto;
-//         padding: 0.5rem 1rem 0.5rem 0.75rem;
-//         border: 2px solid #E5E5E5;
-//         border-radius: 0.5
-//     }
-
-//     button {
-//         width: 100%;
-//         border: none;
-//         border-radius: 0.5rem;
-//         padding: 0.75rem 1.5rem;
-//         font-size: 1.2rem;
-//         font-weight: 500;
-//         color: #FFFFFF;
-//         background-color: #0057FF;
-//         transition: background-color 0.3s ease;
-
-//         &:hover {
-//             background-color: #0046CC;
-//         }
-
-//         &:disabled {
-//             opacity: 0.5;
-//             cursor: not-allowed;
-//         }
-//     }
-
-//     .error-message {
-//         color: #FF3B3B;
-//         font-size: 0.9rem;
-//         margin-top: 0.5rem;
-//     }
-// }
+$radio-border-color: #ccc;
+$radio-background-color: #fff;
+$radio-checked-color: #007bff;
 
 .formulario {
     width: 95%;
@@ -90,10 +16,38 @@
     background-color: #FFFFFF;
 }
 
+p {
+    width: 100%;
+    padding: 0.25rem;
+    text-align: left;
+    font-weight: bold;
+    // border: 1px solid seagreen;
+}
+
 div {
     width: 100%;
     margin-bottom: 1rem;
-    // border: 1px solid red;
-    border-bottom: 0.5px solid rgb(87, 109, 103);
-    padding-bottom: 1.5rem;
+}
+
+.group-container {
+    display: flex;
+    width: 100%;
+    border: 1px solid red;
+
+    label {
+        width: 50%;
+        padding: 0.5rem;
+        border: 1px solid #007bff;
+    }
+
+    input[type="radio"] {
+        margin-left: 1rem;
+        vertical-align: middle;
+        cursor: pointer;
+        width: 1.2em;
+        height: 1.2em;
+        border: 2px solid $radio-border-color;
+        border-radius: 50%;
+        background-color: $radio-background-color;
+    }
 }
