--- a/src/styles/components/VoltageDrop.scss
+++ b/src/styles/components/VoltageDrop.scss
@@ -14,6 +14,16 @@ $radio-checked-color: #007bff;
     border-radius: 1rem;
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
     background-color: #FFFFFF;
+
+    &__system {
+        border-bottom: 1px solid grey;
+
+        p {
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin-bottom: 0.5rem;
+        }
+    }
 }
 
 p {
@@ -31,7 +41,8 @@ div {
     margin-bottom: 1rem;
 }
 
-.group-container {
+
+.radio-input {
     display: flex;
     width: 100%;
     border: 1px solid red;
@@ -41,7 +52,7 @@ div {
         padding: 0.5rem;
 
         font-size: 0.8rem;
-        border: 1px solid #007bff;
+        border: 1px solid #17945a;
     }
 
     input[type="radio"] {
@@ -53,5 +64,26 @@ div {
         border: 2px solid $radio-border-color;
         border-radius: 50%;
         background-color: $radio-background-color;
+    }
+}
+
+.number-input {
+    display: flex;
+    width: 100%;
+    border: 1px solid rebeccapurple;
+
+    label {
+        width: 50%;
+        padding: 0.5rem;
+
+        font-size: 0.8rem;
+        font-weight: bold;
+        border: 1px solid #007bff;
+    }
+
+    input[type="number"] {
+        width: 50%;
+        padding: 0.5rem;
+        border-radius: 5px;
     }
 }
