--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
-    margin: 0;
+    overflow: hidden;
+    margin: 0 auto;
     padding: 0;
 
     font-family: 'Roboto', sans-serif;
