--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -1,6 +1,23 @@
 @use '../utils/variables.scss' as *;
+@use '../utils/variables.scss' as *;
+
 
 .home {
     height: 100vh;
     padding-top: $navbar-heigh;
+
+    &__item {
+        display: block;
+
+        padding: 1.5rem;
+
+        font-size: 1.5rem;
+        font-weight: 400;
+        text-decoration: none;
+        color: $clr-primary;
+
+
+        border-bottom: 1px solid $clr-primary;
+    }
 }
+
