--- a/src/styles/pages/VoltageDrop.scss
+++ b/src/styles/pages/VoltageDrop.scss
@@ -6,11 +6,9 @@
     justify-content: center;
     align-items: center;
 
-    width: 95%;
     max-width: 420px;
     height: 100vh;
-    padding: 2rem;
-    padding-top: $navbar-heigh;
+    padding: 1.5rem;
     margin: 0 auto;
     border-radius: 1rem;
 
@@ -36,7 +34,8 @@
     margin-bottom: 0.8rem;
 
     p {
-        color: rgb(26, 109, 44)
+        width: 55%;
+        color: rgb(26, 109, 44);
     }
 
 }
@@ -53,7 +52,7 @@
     }
 
     input[type="radio"] {
-        margin-left: 1rem;
+        margin-left: 0.5rem;
         vertical-align: middle;
         cursor: pointer;
         width: 1.2em;
@@ -92,7 +91,7 @@
 
 .system-result {
     width: 100%;
-    margin: 1rem 0;
+    // margin: 1rem 0;
     padding: 0.8rem;
     border: 1px solid grey;
     border-radius: 5px;
