--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,16 @@
 * {
     box-sizing: border-box;
     overflow: hidden;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
 
     font-family: 'Roboto', sans-serif;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    min-height: 100vh;
 }
