--- a/src/styles/layout/Layout.scss
+++ b/src/styles/layout/Layout.scss
@@ -1,7 +1,15 @@
+@use '../utils/' as *;
+
 .layout {
     width: 100%;
     max-width: 420px;
     height: 100vh;
 
     border: 1px solid rgb(135, 145, 137);
+
+    @include mediaquery(intermediate) {
+        width: 720px;
+        height: 480px;
+        max-width: 720px;
+    }
 }
