--- a/src/styles/pages/VoltageDrop.scss
+++ b/src/styles/pages/VoltageDrop.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
 
-    max-width: 420px;
+    max-width: 100%;
     height: 100vh;
     padding: 1.5rem;
     margin: 0 auto;
@@ -15,10 +15,23 @@
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
     background-color: #FFFFFF;
 
+    @include mediaquery(intermediate) {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(8, 1fr);
+        gap: 0.5rem;
+
+        height: 100%;
+
+        justify-content: unset;
+        align-items: unset;
+    }
+
     &__container {
         width: 100%;
         margin-bottom: 2rem;
         border-bottom: 1px solid grey;
+        border: 1px solid rebeccapurple;
 
         p {
             width: 40%;
@@ -97,4 +110,31 @@
     border-radius: 5px;
     text-align: center;
     color: rgb(26, 109, 44);
+}
+
+.grid {
+
+    &-system-type {
+        grid-column: 1 / 7;
+        grid-row: 2 / 5;
+        margin-bottom: 0;
+    }
+
+    &-system-current {
+        grid-column: 7 / 13;
+        grid-row: 2 / 5;
+        margin-bottom: 0;
+    }
+
+    &-system-conduit {
+        grid-column: 1 / 7;
+        grid-row: 5 / 9;
+        margin-bottom: 0;
+    }
+
+    &-system-result {
+        grid-column: 7 / 13;
+        grid-row: 5 / 9;
+        margin-bottom: 0;
+    }
 }
