--- a/src/styles/pages/VoltageDrop.scss
+++ b/src/styles/pages/VoltageDrop.scss
@@ -31,7 +31,13 @@
         width: 100%;
         margin-bottom: 2rem;
         border-bottom: 1px solid grey;
-        border: 1px solid rebeccapurple;
+
+
+        @include mediaquery(intermediate) {
+            padding: 0.5rem;
+            border-radius: 5px;
+            border: 1px solid $clr-primary;
+        }
 
         p {
             width: 40%;
@@ -49,6 +55,10 @@
     p {
         width: 55%;
         color: rgb(26, 109, 44);
+
+        @include mediaquery(intermediate) {
+            width: 65%;
+        }
     }
 
 }
@@ -121,20 +131,20 @@
     }
 
     &-system-current {
-        grid-column: 7 / 13;
-        grid-row: 2 / 5;
+        grid-column: 1 / 7;
+        grid-row: 5 / 8;
         margin-bottom: 0;
     }
 
     &-system-conduit {
-        grid-column: 1 / 7;
-        grid-row: 5 / 9;
+        grid-column: 7 / 13;
+        grid-row: 2 / 8;
         margin-bottom: 0;
     }
 
     &-system-result {
-        grid-column: 7 / 13;
-        grid-row: 5 / 9;
+        grid-column: 1 / 13;
+        grid-row: 8 / 9;
         margin-bottom: 0;
     }
 }
