--- a/src/styles/pages/VoltageDrop.scss
+++ b/src/styles/pages/VoltageDrop.scss
@@ -52,6 +52,12 @@
     align-items: center;
     margin-bottom: 0.8rem;
 
+    @include mediaquery(intermediate) {
+        margin-bottom: 1.2rem;
+    }
+
+
+
     p {
         width: 55%;
         color: rgb(26, 109, 44);
@@ -72,7 +78,14 @@
         padding: 0.5rem;
         font-size: 0.8rem;
         text-align: center;
+
+        @include mediaquery(intermediate) {
+            width: 65%;
+            padding: 0;
+        }
     }
+
+
 
     input[type="radio"] {
         margin-left: 0.5rem;
@@ -93,6 +106,10 @@
     width: 100%;
     margin-bottom: 1rem;
 
+    @include mediaquery(intermediate) {
+        margin-bottom: 0;
+    }
+
     label {
         width: 50%;
         padding: 0.5rem;
@@ -100,6 +117,10 @@
         text-align: right;
         font-size: 0.8rem;
         font-weight: bold;
+
+        @include mediaquery(intermediate) {
+            width: 40%;
+        }
     }
 
     input[type="number"],
@@ -109,7 +130,15 @@
         border-radius: 5px;
         text-align: center;
         border: 1px solid $clr-primary;
+
+        @include mediaquery(intermediate) {
+            width: 60%;
+        }
     }
+}
+
+.--mb-1 {
+    margin-bottom: 1rem;
 }
 
 .system-result {
@@ -128,6 +157,11 @@
         grid-column: 1 / 7;
         grid-row: 2 / 5;
         margin-bottom: 0;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
     }
 
     &-system-current {
@@ -136,10 +170,18 @@
         margin-bottom: 0;
     }
 
-    &-system-conduit {
+    &-system-path {
         grid-column: 7 / 13;
         grid-row: 2 / 8;
         margin-bottom: 0;
+
+        &-wire {
+            margin-top: 2rem;
+        }
+
+        &-conduit {
+            margin-top: 3.5rem;
+        }
     }
 
     &-system-result {
