--- a/src/styles/pages/VoltageDrop.scss
+++ b/src/styles/pages/VoltageDrop.scss
@@ -6,11 +6,9 @@
     justify-content: center;
     align-items: center;
 
-    max-width: 100%;
+    width: 100%;
     height: 100vh;
     padding: 1.5rem;
-    margin: 0 auto;
-    border-radius: 1rem;
 
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
     background-color: #FFFFFF;
@@ -137,9 +135,6 @@
     }
 }
 
-.--mb-1 {
-    margin-bottom: 1rem;
-}
 
 .system-result {
     width: 100%;
@@ -151,42 +146,53 @@
     color: rgb(26, 109, 44);
 }
 
-.grid {
 
-    &-system-type {
-        grid-column: 1 / 7;
-        grid-row: 2 / 5;
-        margin-bottom: 0;
+@include mediaquery(intermediate) {
 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-
+    .--mb-1 {
+        margin-bottom: 1rem;
     }
 
-    &-system-current {
-        grid-column: 1 / 7;
-        grid-row: 5 / 8;
-        margin-bottom: 0;
-    }
+    .grid {
 
-    &-system-path {
-        grid-column: 7 / 13;
-        grid-row: 2 / 8;
-        margin-bottom: 0;
+        &-system-type {
+            grid-column: 1 / 7;
+            grid-row: 2 / 5;
+            margin-bottom: 0;
 
-        &-wire {
-            margin-top: 2rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
         }
 
-        &-conduit {
-            margin-top: 3.5rem;
+        &-system-current {
+            grid-column: 1 / 7;
+            grid-row: 5 / 8;
+            margin-bottom: 0;
+        }
+
+        &-system-path {
+            grid-column: 7 / 13;
+            grid-row: 2 / 8;
+            margin-bottom: 0;
+
+            &-wire {
+                margin-top: 2rem;
+            }
+
+            &-conduit {
+                margin-top: 3.5rem;
+            }
+        }
+
+        &-system-result {
+            grid-column: 1 / 13;
+            grid-row: 8 / 9;
+            margin-bottom: 0;
         }
     }
 
-    &-system-result {
-        grid-column: 1 / 13;
-        grid-row: 8 / 9;
-        margin-bottom: 0;
-    }
+
+
 }
