--- a/src/styles/pages/CurrentCapacity.scss
+++ b/src/styles/pages/CurrentCapacity.scss
@@ -27,7 +27,6 @@
         width: 100%;
 
         @include mediaquery(intermediate) {
-            display: flex;
             justify-content: space-between;
 
             width: 50%;
@@ -37,4 +36,15 @@
             border: 1px solid $clr-primary;
         }
     }
+}
+
+.btn-primary {
+    width: 100%;
+    padding: 1rem;
+    margin-top: 0.5rem;
+    border: none;
+    border-radius: 5px;
+
+    color: white;
+    background-color: $clr-primary;
 }
