--- a/src/styles/pages/VoltageDrop.scss
+++ b/src/styles/pages/VoltageDrop.scss
@@ -140,6 +140,13 @@
     border-radius: 5px;
     text-align: center;
     color: rgb(26, 109, 44);
+
+    div {
+        cursor: pointer;
+        color: rgb(124, 122, 122);
+        font-size: 0.8rem;
+        padding-top: 1rem;
+    }
 }
 
 
