--- a/src/styles/components/NavBar.scss
+++ b/src/styles/components/NavBar.scss
@@ -4,6 +4,9 @@
 .NavBar {
     position: fixed;
 
+    display: flex;
+    align-items: center;
+
     width: 100%;
     max-width: 720px;
     height: $navbar-heigh;
@@ -11,12 +14,10 @@
     background-color: $clr-primary;
 
     p {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        width: 100%;
 
         color: white;
+        text-align: center;
         font-size: clamp(1.5rem, 2vw, 2rem);
         font-weight: 700;
     }
