--- a/src/styles/components/NavBar.scss
+++ b/src/styles/components/NavBar.scss
@@ -10,8 +10,11 @@
     width: 100%;
     max-width: 720px;
     height: $navbar-heigh;
+    border-bottom: 1.5px solid rgb(55, 76, 47);
 
     background-color: $clr-primary;
+    box-shadow: 0px 6px 5px -5px rgba(59, 57, 57, 0.5);
+
 
     p {
         width: 100%;
