--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -4,25 +4,52 @@
 .home {
     width: 100%;
     height: 100vh;
-    padding-top: $navbar-heigh;
+    // padding-top: $navbar-heigh;
 
-    &__item {
-        display: block;
+    figure {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
+        align-items: flex-end;
+        width: 100%;
+        height: 50vh;
 
-        padding: 1.5rem;
-        border-bottom: 1px solid $clr-primary;
-
-        font-size: 1.5rem;
-        font-weight: 400;
-        color: $clr-primary;
-        text-decoration: none;
-
-        svg  {
-            margin: 0;
+        img {
+            width: 100%;
         }
     }
-}
 
+    &__items {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        height: 50vh;
+
+        background-color: rgba(191, 200, 220, 0.2);
+
+        &__item {
+            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            width: 80px;
+            height: 80px;
+            padding: 1.5rem;
+            border: 1px solid $clr-primary;
+            border-radius: 50%;
+
+            font-size: 1.5rem;
+            font-weight: 400;
+            color: $clr-primary;
+            text-decoration: none;
+
+            svg {
+                margin: 0;
+                display: none;
+            }
+        }
+
+    }
+
+
+}
