--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -27,25 +27,44 @@
         background-color: rgba(191, 200, 220, 0.2);
 
         &__item {
+            position: relative;
+            overflow: visible;
             display: block;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
 
             width: 80px;
             height: 80px;
-            padding: 1.5rem;
-            border: 1px solid $clr-primary;
+            margin-bottom: 0.5rem;
             border-radius: 50%;
+            border: 1px solid $clr-primary;
 
-            font-size: 1.5rem;
-            font-weight: 400;
-            color: $clr-primary;
-            text-decoration: none;
+
+
+            box-shadow: 0px 8px 5px -5px rgba(59, 57, 57, 0.5);
+
+            a {
+                text-decoration: none;
+            }
 
             svg {
-                margin: 0;
-                display: none;
+                margin: 0 auto;
+                width: 50px;
+                border-radius: 50%;
+                stroke: $clr-primary;
+            }
+
+            span {
+                // border: 1px solid blue;
+                position: absolute;
+                top: 110%;
+                left: 0%;
+
+                font-size: 0.8rem;
+                font-weight: 400;
+                text-align: center;
+                color: $clr-primary;
             }
         }
 
