--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -49,10 +49,10 @@
             }
 
             svg {
-                margin: 0 auto;
                 width: 50px;
                 border-radius: 50%;
                 stroke: $clr-primary;
+                fill: $clr-primary;
             }
 
             span {
@@ -61,8 +61,9 @@
                 top: 110%;
                 left: 0%;
 
+                width: 110%;
                 font-size: 0.8rem;
-                font-weight: 400;
+                font-weight: bold;
                 text-align: center;
                 color: $clr-primary;
             }
