--- a/src/styles/pages/CurrentCapacity.scss
+++ b/src/styles/pages/CurrentCapacity.scss
@@ -1,14 +1,16 @@
 @use '../utils/' as *;
 
 .current-capacity {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
 
     height: 100vh;
-    padding: 1.5rem;
-    padding-top: $navbar-heigh + 3vh;
+    padding: 1rem;
+    padding-top: $navbar-heigh + 1vh;
+    padding-bottom: 0.5rem;
 
 
     @include mediaquery(intermediate) {
@@ -17,46 +19,44 @@
         justify-content: center;
         width: 720px;
         height: 100%;
-        margin-top: unset;
+        padding: 1.5rem;
+        padding-top: $navbar-heigh + 3vh;
     }
 
     &__container {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
 
         width: 100%;
+        height: 50vh;
         padding: 1rem;
         border: 1px solid $clr-primary;
         border-radius: 5px;
-
-        box-shadow: 0px 8px 5px -5px rgba(59, 57, 57, 0.5);
 
         @include mediaquery(intermediate) {
             width: 50%;
             height: 100%;
             padding: 1.5rem;
 
+            box-shadow: 0px 8px 5px -5px rgba(59, 57, 57, 0.5);
         }
     }
 
 }
 
 .voltage-dropchecker {
-    position: absolute;
-
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    display: none;
+    justify-content: space-evenly;
 
-    width: 87.5%;
-    height: 420px;
+    width: 100%;
+    height: 50vh;
     padding: 1rem;
     border-radius: 5px;
     border: 1px solid $clr-primary;
 
-    background-color: white;
+    box-shadow: 0px 8px 5px -5px rgba(59, 57, 57, 0.5);
 
     @include mediaquery(intermediate) {
         position: initial;
