--- a/src/styles/pages/CurrentCapacity.scss
+++ b/src/styles/pages/CurrentCapacity.scss
@@ -87,10 +87,6 @@
     background-color: $clr-primary;
 
     @include mediaquery(intermediate) {
-        // display: none;
+        display: none;
     }
-}
-
-.show {
-    display: flex;
 }
