--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -50,6 +50,7 @@
 
             svg {
                 width: 50px;
+                height: 70px;
                 border-radius: 50%;
                 stroke: $clr-primary;
                 fill: $clr-primary;
