--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -24,7 +24,8 @@
         width: 100%;
         height: 50vh;
 
-        background-color: rgba(191, 200, 220, 0.2);
+        // background-image: linear-gradient(to top, #d1d5e5 30%, #e1e3ed 70%, #f1f1f6, #ffffff);
+        background-image: linear-gradient(to top, #d1d5e5, #dddfeb 40% ,#e9e9f2 80%, #f4f4f8, #ffffff);
 
         &__item {
             position: relative;
@@ -74,4 +75,3 @@
 
 
 }
-
