--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,4 +1,5 @@
-$clr-primary: rgb(84, 137, 62);
+$clr-primary: hsl(102, 38%, 39%);
+$clr-secondary: hsl(218, 25%, 58%);
 
 
 // Map breakpoints for media queries
