--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -4,6 +4,7 @@
 .home {
     position: relative;
     z-index: 100;
+
     width: 100%;
     height: 100vh;
     padding-top: $navbar-heigh;
@@ -14,11 +15,14 @@
 
     figure {
         display: flex;
+        justify-content: center;
         align-items: flex-end;
         width: 100%;
         height: 50vh;
 
+
         @include mediaquery(intermediate) {
+            align-items: flex-start;
             height: 50%;
         }
 
@@ -26,8 +30,10 @@
             width: 100%;
 
             @include mediaquery(intermediate) {
+                width: 350px;
+                height: auto;
+
                 opacity: 0.7;
-                height: 100%;
             }
         }
     }
@@ -43,7 +49,6 @@
             height: 50%;
         }
 
-        // background-image: linear-gradient(to top, #d1d5e5 30%, #e1e3ed 70%, #f1f1f6, #ffffff);
         background-image: linear-gradient(to top, #d1d5e5, #dddfeb 40%, #e9e9f2 80%, #f4f4f8, #ffffff);
 
         &__item {
@@ -59,8 +64,6 @@
             margin-bottom: 0.5rem;
             border-radius: 50%;
             border: 1px solid $clr-primary;
-
-
 
             box-shadow: 0px 8px 5px -5px rgba(59, 57, 57, 0.5);
 
@@ -91,6 +94,5 @@
         }
 
     }
-
 
 }
