--- a/src/styles/pages/VoltageDrop.scss
+++ b/src/styles/pages/VoltageDrop.scss
@@ -34,13 +34,21 @@
         border: 1px solid grey;
         border-radius: 5px;
 
-        box-shadow: 0px 8px 5px -5px rgba(59,57,57,0.5);
-
+        box-shadow: 0px 8px 5px -5px rgba(59, 57, 57, 0.5);
 
         @include mediaquery(intermediate) {
             padding: 0.5rem;
             border-radius: 5px;
             border: 1px solid $clr-primary;
+        }
+
+        p {
+            margin-bottom: 1rem;
+
+            font-size: 1.2rem;
+            font-weight: bold;
+            color: rgb(26, 109, 44);
+            text-align: center;
         }
     }
 }
@@ -147,7 +155,7 @@
     text-align: center;
     color: rgb(26, 109, 44);
 
-    box-shadow: 0px 8px 5px -5px rgba(59,57,57,0.5);
+    box-shadow: 0px 8px 5px -5px rgba(59, 57, 57, 0.5);
 
     &--unshadow {
         box-shadow: none;
