--- a/src/styles/components/NavBar.scss
+++ b/src/styles/components/NavBar.scss
@@ -3,17 +3,37 @@
 
 .NavBar {
     position: fixed;
-    z-index: 100;
+    z-index: 10000;
     display: flex;
     align-items: center;
 
     width: 100%;
     max-width: 720px;
     height: $navbar-heigh;
-    border-bottom: 1.5px solid rgb(55, 76, 47);
+    border-bottom: 1.5px solid rgb(118, 146, 107);
 
     background-color: $clr-primary;
     box-shadow: 0px 6px 5px -5px rgba(59, 57, 57, 0.5);
+
+    a {
+        position: relative;
+        left: 3%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+
+        padding: 0.25rem;
+        border: 1.5px solid rgb(185, 212, 172);
+        border-radius: 5px;
+
+        svg {
+            width: 24px;
+            height: 24px;
+            fill: white;
+        }
+    }
 
 
     p {
