--- a/src/styles/pages/CurrentCapacity.scss
+++ b/src/styles/pages/CurrentCapacity.scss
@@ -34,6 +34,9 @@
         border: 1px solid $clr-primary;
         border-radius: 5px;
 
+        box-shadow: 0px 8px 5px -5px rgba(59, 57, 57, 0.5);
+        background-color: #FFFFFF;
+
         @include mediaquery(intermediate) {
             width: 50%;
             height: 100%;
