--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -41,6 +41,7 @@
 
     &__items {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-evenly;
         align-items: center;
         width: 100%;
