--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -40,10 +40,16 @@
     }
 
     &__items {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        align-items: center;
+        display: grid;
+        // gap: 1.5rem;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 150px 150px;
+        place-items: center;
+        align-content: center;
+        // display: flex;
+        // flex-wrap: wrap;
+        // justify-content: space-evenly;
+        // align-items: center;
         width: 100%;
         height: 50vh;
 
