Style: row dimentions for gid at home items

--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -41,9 +41,9 @@
 
     &__items {
         display: grid;
-        // gap: 1.5rem;
+        gap: 1rem;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 150px 150px;
+        grid-template-rows: 120px 120px;
         place-items: center;
         align-content: center;
         // display: flex;
