--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -44,14 +44,13 @@
         gap: 0.5rem;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 120px 120px;
-        place-items: center;
+        justify-items: center;
+        align-items: start;
         align-content: center;
-        // display: flex;
-        // flex-wrap: wrap;
-        // justify-content: space-evenly;
-        // align-items: center;
+
         width: 100%;
         height: 50vh;
+        padding: 1rem 2rem;
 
         @include mediaquery(intermediate) {
             height: 45%;
